handle error middleware

--- a/LayeredArchitecture.API/LayeredArchitecture.API.csproj
+++ b/LayeredArchitecture.API/LayeredArchitecture.API.csproj
@@ -25,6 +25,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\LayeredArchitecture.Application\LayeredArchitecture.Application.csproj" />
+		<ProjectReference Include="..\LayeredArchitecture.Common\LayeredArchitecture.Common.csproj" />
 		<ProjectReference Include="..\LayeredArchitecture.Infrastructure\LayeredArchitecture.Infrastructure.csproj" />
 	</ItemGroup>
 
